rust/macros/tests/invalid/target/rls/debug/deps/only_arrow_rs-efb45dae4862a183.d
e:\playground\Exercism Solutions\rust\macros\tests\invalid\target\rls\debug\deps\only_arrow_rs-efb45dae4862a183.rmeta: only-arrow.rs

e:\playground\Exercism Solutions\rust\macros\tests\invalid\target\rls\debug\deps\only_arrow_rs-efb45dae4862a183.d: only-arrow.rs

only-arrow.rs:
